--- a/Segmenting and Clustering Neighborhoods in Singapore.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Singapore.ipynb
@@ -81,6 +81,507 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To get the postal districts and neighborhoods in Singapore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting package metadata (current_repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "Collecting package metadata (current_repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "Collecting package metadata (current_repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "Collecting package metadata (current_repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "Libraries imported.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Import necessary modules and libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from urllib.request import urlopen\n",
+    "!conda install -c conda-forge beautifulsoup4 --yes\n",
+    "from bs4 import BeautifulSoup \n",
+    "!conda install -c conda-forge lxml --yes\n",
+    "\n",
+    "import json # library to handle JSON files\n",
+    "\n",
+    "import requests # library to handle requests\n",
+    "from pandas.io.json import json_normalize # tranform JSON file into a pandas dataframe\n",
+    "\n",
+    "# Matplotlib and associated plotting modules\n",
+    "import matplotlib.cm as cm\n",
+    "import matplotlib.colors as colors\n",
+    "\n",
+    "# import k-means from clustering stage\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "!conda install -c conda-forge folium=0.5.0 --yes # install folium \n",
+    "import folium # map rendering library\n",
+    "\n",
+    "!conda install -c conda-forge geopy --yes # uncomment this line if you haven't completed the Foursquare API lab\n",
+    "from geopy.geocoders import Nominatim # convert an address into latitude and longitude values\n",
+    "\n",
+    "\n",
+    "print('Libraries imported.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bs4.BeautifulSoup"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Get the webpage from Wikipedia - List of postal codes in Singapore\n",
+    "\n",
+    "url = \"https://en.wikipedia.org/wiki/Postal_codes_in_Singapore\"\n",
+    "html = urlopen(url)\n",
+    "\n",
+    "#Create a Beautiful Soup object from the html\n",
+    "soup = BeautifulSoup(html, 'lxml')\n",
+    "type(soup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal District</th>\n",
+       "      <th>Postal Sector</th>\n",
+       "      <th>General Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01</td>\n",
+       "      <td>01, 02, 03, 04, 05, 06</td>\n",
+       "      <td>Raffles Place, Cecil, Marina, People's Park</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>02</td>\n",
+       "      <td>07, 08</td>\n",
+       "      <td>Anson, Tanjong Pagar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>03</td>\n",
+       "      <td>14, 15, 16</td>\n",
+       "      <td>Bukit Merah,Queenstown,Tiong Bahru</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>04</td>\n",
+       "      <td>09, 10</td>\n",
+       "      <td>Telok Blangah, Harbourfront</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>05</td>\n",
+       "      <td>11, 12, 13</td>\n",
+       "      <td>Pasir Panjang, Hong Leong Garden, Clementi New...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>06</td>\n",
+       "      <td>17</td>\n",
+       "      <td>High Street, Beach Road (part)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>07</td>\n",
+       "      <td>18, 19</td>\n",
+       "      <td>Middle Road, Golden Mile</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>08</td>\n",
+       "      <td>20, 21</td>\n",
+       "      <td>Little India,Farrer Park,Jalan Besar,Lavender</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>09</td>\n",
+       "      <td>22, 23</td>\n",
+       "      <td>Orchard, Cairnhill, River Valley</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>24, 25, 26, 27</td>\n",
+       "      <td>Ardmore, Bukit Timah, Holland Road, Tanglin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11</td>\n",
+       "      <td>28, 29, 30</td>\n",
+       "      <td>Watten Estate, Novena, Thomson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>31, 32, 33</td>\n",
+       "      <td>Balestier, Toa Payoh, Serangoon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13</td>\n",
+       "      <td>34, 35, 36, 37</td>\n",
+       "      <td>Macpherson, Braddell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14</td>\n",
+       "      <td>38, 39, 40, 41</td>\n",
+       "      <td>Geylang, Eunos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15</td>\n",
+       "      <td>42, 43, 44, 45</td>\n",
+       "      <td>Katong, Joo Chiat, Amber Road</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>16</td>\n",
+       "      <td>46, 47, 48</td>\n",
+       "      <td>Bedok, Upper East Coast, Eastwood, Kew Drive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>17</td>\n",
+       "      <td>49, 50, 81</td>\n",
+       "      <td>Loyang, Changi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>51, 52</td>\n",
+       "      <td>Simei, Tampines, Pasir Ris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>19</td>\n",
+       "      <td>53, 54, 55, 82</td>\n",
+       "      <td>Serangoon Garden, Hougang, Punggol</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>20</td>\n",
+       "      <td>56, 57</td>\n",
+       "      <td>Bishan, Ang Mo Kio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>21</td>\n",
+       "      <td>58, 59</td>\n",
+       "      <td>Upper Bukit Timah, Clementi Park, Ulu Pandan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>22</td>\n",
+       "      <td>60, 61, 62, 63, 64</td>\n",
+       "      <td>Jurong, Tuas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>23</td>\n",
+       "      <td>65, 66, 67, 68</td>\n",
+       "      <td>Hillview, Dairy Farm, Bukit Panjang, Choa Chu ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>24</td>\n",
+       "      <td>69, 70, 71</td>\n",
+       "      <td>Lim Chu Kang, Tengah</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>25</td>\n",
+       "      <td>72, 73</td>\n",
+       "      <td>Kranji, Woodgrove, Woodlands</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>26</td>\n",
+       "      <td>77, 78</td>\n",
+       "      <td>Upper Thomson, Springleaf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>27</td>\n",
+       "      <td>75, 76</td>\n",
+       "      <td>Yishun, Sembawang</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>28</td>\n",
+       "      <td>79, 80</td>\n",
+       "      <td>Seletar</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Postal District           Postal Sector  \\\n",
+       "1               01  01, 02, 03, 04, 05, 06   \n",
+       "2               02                  07, 08   \n",
+       "3               03              14, 15, 16   \n",
+       "4               04                  09, 10   \n",
+       "5               05              11, 12, 13   \n",
+       "6               06                      17   \n",
+       "7               07                  18, 19   \n",
+       "8               08                  20, 21   \n",
+       "9               09                  22, 23   \n",
+       "10              10          24, 25, 26, 27   \n",
+       "11              11              28, 29, 30   \n",
+       "12              12              31, 32, 33   \n",
+       "13              13          34, 35, 36, 37   \n",
+       "14              14          38, 39, 40, 41   \n",
+       "15              15          42, 43, 44, 45   \n",
+       "16              16              46, 47, 48   \n",
+       "17              17              49, 50, 81   \n",
+       "18              18                  51, 52   \n",
+       "19              19          53, 54, 55, 82   \n",
+       "20              20                  56, 57   \n",
+       "21              21                  58, 59   \n",
+       "22              22      60, 61, 62, 63, 64   \n",
+       "23              23          65, 66, 67, 68   \n",
+       "24              24              69, 70, 71   \n",
+       "25              25                  72, 73   \n",
+       "26              26                  77, 78   \n",
+       "27              27                  75, 76   \n",
+       "28              28                  79, 80   \n",
+       "\n",
+       "                                     General Location  \n",
+       "1         Raffles Place, Cecil, Marina, People's Park  \n",
+       "2                                Anson, Tanjong Pagar  \n",
+       "3                  Bukit Merah,Queenstown,Tiong Bahru  \n",
+       "4                         Telok Blangah, Harbourfront  \n",
+       "5   Pasir Panjang, Hong Leong Garden, Clementi New...  \n",
+       "6                      High Street, Beach Road (part)  \n",
+       "7                            Middle Road, Golden Mile  \n",
+       "8       Little India,Farrer Park,Jalan Besar,Lavender  \n",
+       "9                    Orchard, Cairnhill, River Valley  \n",
+       "10        Ardmore, Bukit Timah, Holland Road, Tanglin  \n",
+       "11                     Watten Estate, Novena, Thomson  \n",
+       "12                    Balestier, Toa Payoh, Serangoon  \n",
+       "13                               Macpherson, Braddell  \n",
+       "14                                     Geylang, Eunos  \n",
+       "15                      Katong, Joo Chiat, Amber Road  \n",
+       "16       Bedok, Upper East Coast, Eastwood, Kew Drive  \n",
+       "17                                     Loyang, Changi  \n",
+       "18                         Simei, Tampines, Pasir Ris  \n",
+       "19                 Serangoon Garden, Hougang, Punggol  \n",
+       "20                                 Bishan, Ang Mo Kio  \n",
+       "21       Upper Bukit Timah, Clementi Park, Ulu Pandan  \n",
+       "22                                       Jurong, Tuas  \n",
+       "23  Hillview, Dairy Farm, Bukit Panjang, Choa Chu ...  \n",
+       "24                               Lim Chu Kang, Tengah  \n",
+       "25                       Kranji, Woodgrove, Woodlands  \n",
+       "26                          Upper Thomson, Springleaf  \n",
+       "27                                  Yishun, Sembawang  \n",
+       "28                                            Seletar  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table = soup.find_all('table')[0] # Grab the first table\n",
+    "    \n",
+    "new_table = pd.DataFrame(columns=['Postal District', 'Postal Sector', 'General Location'], index = list(range(29))) # I know the size \n",
+    "    \n",
+    "row_marker = 0\n",
+    "for row in table.find_all('tr'):\n",
+    "    column_marker = 0\n",
+    "    columns = row.find_all('td')\n",
+    "    for column in columns:\n",
+    "        new_table.iat[row_marker,column_marker] = column.get_text(strip=True)\n",
+    "        column_marker += 1\n",
+    "    row_marker += 1\n",
+    "new_table\n",
+    "new_table.drop(new_table.index[0], inplace=True) #drop fisrt row which is empty\n",
+    "new_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_table.to_csv('postal_district.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal District</th>\n",
+       "      <th>Postal Sector</th>\n",
+       "      <th>General Location</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>01, 02, 03, 04, 05, 06</td>\n",
+       "      <td>Raffles Place, Cecil, Marina, People's Park</td>\n",
+       "      <td>1.2830</td>\n",
+       "      <td>103.8513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>07, 08</td>\n",
+       "      <td>Anson, Tanjong Pagar</td>\n",
+       "      <td>1.2780</td>\n",
+       "      <td>103.8404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>14, 15, 16</td>\n",
+       "      <td>Bukit Merah,Queenstown,Tiong Bahru</td>\n",
+       "      <td>1.2896</td>\n",
+       "      <td>103.8168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>09, 10</td>\n",
+       "      <td>Telok Blangah, Harbourfront</td>\n",
+       "      <td>1.2707</td>\n",
+       "      <td>103.8099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>11, 12, 13</td>\n",
+       "      <td>Pasir Panjang, Hong Leong Garden, Clementi New...</td>\n",
+       "      <td>1.2966</td>\n",
+       "      <td>103.7764</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Postal District           Postal Sector  \\\n",
+       "0                1  01, 02, 03, 04, 05, 06   \n",
+       "1                2                  07, 08   \n",
+       "2                3              14, 15, 16   \n",
+       "3                4                  09, 10   \n",
+       "4                5              11, 12, 13   \n",
+       "\n",
+       "                                    General Location  Latitude  Longitude  \n",
+       "0        Raffles Place, Cecil, Marina, People's Park    1.2830   103.8513  \n",
+       "1                               Anson, Tanjong Pagar    1.2780   103.8404  \n",
+       "2                 Bukit Merah,Queenstown,Tiong Bahru    1.2896   103.8168  \n",
+       "3                        Telok Blangah, Harbourfront    1.2707   103.8099  \n",
+       "4  Pasir Panjang, Hong Leong Garden, Clementi New...    1.2966   103.7764  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#import pandas as pd\n",
+    "df_lat_long = pd.read_csv('postal_district_latlong.csv')\n",
+    "df_lat_long.head(5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
