--- a/Segmenting and Clustering Neighborhoods in Singapore.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Singapore.ipynb
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Data Acquisition and Cleaning"
+    "## 3. Data Acquisition and Cleaning"
    ]
   },
   {
@@ -4990,7 +4990,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8. Future Directions"
+    "## 8. Future Directions"
    ]
   },
   {
